# Grove_organic_todo_website

./: .gitignore  AGENTS.md  CHANGELOG.md  DEPLOY.md  DESIGN.md  LICENSE  README.md  SECURITY.md  capacitor.config.json  index.html  package-lock.json  package.json  vercel.json
.cursor/agents/: backend-logic-architect.md  ui-ux-specialist.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  feedback.yml
.github/workflows/: cleanup-deployments.yml  cleanup-releases.yml  release.yml  sync-android-apk.yml
android/app/: build.gradle
android/app/src/main/java/com/organic/todo/: MainActivity.java
android/app/src/main/res/drawable/: grove_splash_bg.xml  splash.xml
android/app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml  styles.xml
docs/: DESIGN.md  MOBILE-NATIVE.md
marketing/: landingpage.html
scripts/: assemble-debug-apk.ps1  build-pwa.mjs  copy-cap-android-icons.mjs  prepare-icon.py
src/: app-ui-lock.css  grove-palettes.js  grove-tokens.css  index.html  manifest.webmanifest  mobile.css  sw.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
