[package]
name = "organic-todo"
version = "1.0.0"
description = "Grove — tasks, focus & memo for desktop"
authors = ["Ethan"]
edition = "2021"

[lib]
name = "organic_todo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
